src/compiler/snapshots/isa__compiler__lexer__tests__ifs-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer ::\nnew(0, \"if false then if true then false else true else false\").collect :: <\nVec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwIf,
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 3, hi: 8 },
        },
    ),
    Ok(
        Spand {
            data: KwThen,
            span: SpanData { file_id: 0, lo: 9, hi: 13 },
        },
    ),
    Ok(
        Spand {
            data: KwIf,
            span: SpanData { file_id: 0, lo: 14, hi: 16 },
        },
    ),
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, lo: 17, hi: 21 },
        },
    ),
    Ok(
        Spand {
            data: KwThen,
            span: SpanData { file_id: 0, lo: 22, hi: 26 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 27, hi: 32 },
        },
    ),
    Ok(
        Spand {
            data: KwElse,
            span: SpanData { file_id: 0, lo: 33, hi: 37 },
        },
    ),
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, lo: 38, hi: 42 },
        },
    ),
    Ok(
        Spand {
            data: KwElse,
            span: SpanData { file_id: 0, lo: 43, hi: 47 },
        },
    ),
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 48, hi: 53 },
        },
    ),
]
