src/compiler/snapshots/isa__compiler__lexer__tests__infix-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"string\" + (1 * 1)\"#).collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: String(
                "string",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 8 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, lo: 9, hi: 10 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, lo: 11, hi: 12 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, lo: 12, hi: 13 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "*",
            ),
            span: SpanData { file_id: 0, lo: 14, hi: 15 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, lo: 16, hi: 17 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, lo: 17, hi: 18 },
        },
    ),
]
