src/compiler/snapshots/isa__compiler__lexer__tests__invalid_errors-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"λ λ λ\").collect :: < Vec < _ >> ()"
---
[
    Err(
        Spand {
            data: InvalidChar(
                'λ',
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 2 },
        },
    ),
    Err(
        Spand {
            data: InvalidChar(
                'λ',
            ),
            span: SpanData { file_id: 0, lo: 3, hi: 5 },
        },
    ),
    Err(
        Spand {
            data: InvalidChar(
                'λ',
            ),
            span: SpanData { file_id: 0, lo: 6, hi: 8 },
        },
    ),
]
