src/compiler/snapshots/isa__compiler__lexer__tests__lambdas.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r\"\\x -> x\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: Backslash,
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "x",
            ),
            span: SpanData { file_id: 0, start: 1, end: 2 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, start: 3, end: 5 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "x",
            ),
            span: SpanData { file_id: 0, start: 6, end: 7 },
        },
    ),
]
