src/compiler/snapshots/isa__compiler__lexer__tests__let_stmts-2.snap
---
source: src/compiler/lexer.rs
expression: "Lexer ::\nnew(0,\n\"let fib n = match n with ..2 -> n, _ -> fib (n - 1) + fib (n - 2)\").collect\n:: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: KwLet,
            span: SpanData { file_id: 0, start: 0, end: 3 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "fib",
            ),
            span: SpanData { file_id: 0, start: 4, end: 7 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "n",
            ),
            span: SpanData { file_id: 0, start: 8, end: 9 },
        },
    ),
    Ok(
        Spand {
            data: Eq,
            span: SpanData { file_id: 0, start: 10, end: 11 },
        },
    ),
    Ok(
        Spand {
            data: KwMatch,
            span: SpanData { file_id: 0, start: 12, end: 17 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "n",
            ),
            span: SpanData { file_id: 0, start: 18, end: 19 },
        },
    ),
    Ok(
        Spand {
            data: KwWith,
            span: SpanData { file_id: 0, start: 20, end: 24 },
        },
    ),
    Ok(
        Spand {
            data: DotDot,
            span: SpanData { file_id: 0, start: 25, end: 27 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                2,
            ),
            span: SpanData { file_id: 0, start: 27, end: 28 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, start: 29, end: 31 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "n",
            ),
            span: SpanData { file_id: 0, start: 32, end: 33 },
        },
    ),
    Ok(
        Spand {
            data: Comma,
            span: SpanData { file_id: 0, start: 33, end: 34 },
        },
    ),
    Ok(
        Spand {
            data: Underscore,
            span: SpanData { file_id: 0, start: 35, end: 36 },
        },
    ),
    Ok(
        Spand {
            data: Arrow,
            span: SpanData { file_id: 0, start: 37, end: 39 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "fib",
            ),
            span: SpanData { file_id: 0, start: 40, end: 43 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 44, end: 45 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "n",
            ),
            span: SpanData { file_id: 0, start: 45, end: 46 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, start: 47, end: 48 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, start: 49, end: 50 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 50, end: 51 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, start: 52, end: 53 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "fib",
            ),
            span: SpanData { file_id: 0, start: 54, end: 57 },
        },
    ),
    Ok(
        Spand {
            data: LParen,
            span: SpanData { file_id: 0, start: 58, end: 59 },
        },
    ),
    Ok(
        Spand {
            data: Ident(
                "n",
            ),
            span: SpanData { file_id: 0, start: 59, end: 60 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, start: 61, end: 62 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                2,
            ),
            span: SpanData { file_id: 0, start: 63, end: 64 },
        },
    ),
    Ok(
        Spand {
            data: RParen,
            span: SpanData { file_id: 0, start: 64, end: 65 },
        },
    ),
]
